[gd_scene load_steps=3 format=3 uid="uid://7sy7gc06sx86"]

[ext_resource type="Script" path="res://ui/LifeCounter.gd" id="1_4ubed"]
[ext_resource type="Texture2D" uid="uid://cpja42fa4lkq0" path="res://ui/life_icon.png" id="2_72uil"]

[node name="LifeCounter" type="HBoxContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 366.0
grow_vertical = 0
script = ExtResource("1_4ubed")

[node name="LifeIcon1" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon2" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon3" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon4" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon5" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon6" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon7" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon8" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon9" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")

[node name="LifeIcon10" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_72uil")
